--- a/GNN_Molekul.ipynb
+++ b/GNN_Molekul.ipynb
@@ -25,7 +25,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,7 +100,7 @@
       "metadata": {
         "id": "H9b0EHqQXYjd"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -792,7 +792,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1225,7 +1225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1282,7 +1282,7 @@
           "height": 423
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1666,7 +1666,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1711,7 +1711,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "28XP9tiECHxU"
       },
@@ -1729,7 +1729,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1834,7 +1834,7 @@
         "id": "jKdswCRmsx_f",
         "outputId": "276d550e-fdfa-4d56-83b2-e0226d71e6d0"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1865,7 +1865,7 @@
           "height": 564
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1908,7 +1908,7 @@
         "id": "WctMoA_jxIjS",
         "outputId": "fbc8cd06-ef71-4641-c71c-56d93d435db3"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2016,11 +2016,11 @@
         "        return self.conv2(x+inputs, edge_index, edge_attr)\n",
         "\n",
         "class GNNModel(nn.Module):\n",
-        "    def __init__(self, num_features, edge_features, c1=128, c2=128, num_block=2, output_dim=2):\n",
+        "    def __init__(self, num_features, edge_features, c1=128, c2=128, num_block=2, output_dim=2, dropout_rate=0.2):\n",
         "        super().__init__()\n",
         "        self.inputs = GINEConv(nn.Linear(num_features, c1//2), edge_dim=edge_features)\n",
         "        self.conv = GINEConv(nn.Linear(c1//2, c1), edge_dim=edge_features)\n",
-        "        self.block = [GNNBlock(edge_features, c1, c2) for i in range(num_block)]\n",
+        "        self.block = [GNNBlock(edge_features, c1, c2, dropout_rate=dropout_rate) for i in range(num_block)]\n",
         "        self.cls = nn.Linear(c1, output_dim)\n",
         "\n",
         "    def forward(self, data):\n",
@@ -2050,7 +2050,7 @@
         "        self.train_loader, self.val_loader = self.loader()\n",
         "        self.num_node_features = self.train_loader.dataset[0].x.size(1)\n",
         "        self.num_edge_features = self.train_loader.dataset[0].edge_attr.size(1)\n",
-        "        self.model = GNNModel(self.num_node_features, self.num_edge_features, c1, c2, num_block, output_dim)\n",
+        "        self.model = GNNModel(self.num_node_features, self.num_edge_features, c1, c2, num_block, output_dim, dropout_rate)\n",
         "        self.device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
         "        self.model = self.model.to(self.device)\n",
         "        print(\"Successful load model\")\n",
@@ -2163,7 +2163,7 @@
       "metadata": {
         "id": "x3FDmAEXOpXD"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2181,7 +2181,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4037,7 +4037,7 @@
       "metadata": {
         "id": "PR4-U1vnvSeY"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
